--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -38,15 +38,15 @@
         </div>
     </div>
     <div class="user-profile-action" style="display:flex;flex-direction:column;justify-content:center;align-items:center;background-color:#1874d2">
-    <img src="/assets/whale1.gif" style="height: 30vh;width:30vh;">
+      <%= image_tag("whale1.gif",{:style=>"height: 30vh;width:30vh;"})%>
     <h1 style="color:white;font-size:3vh;font-weight:400;">콘텐츠 준비중!</h1>
     </div>
     <div class="user-profile-mypost" style="display:flex;flex-direction:column;justify-content:center;align-items:center;background-color:#1874d2">
-    <img src="/assets/whale1.gif" style="height: 30vh;width:30vh;">
+   <%= image_tag("whale1.gif",{:style=>"height: 30vh;width:30vh;"})%>
     <h1 style="color:white;font-size:3vh;font-weight:400;">콘텐츠 준비중!</h1>
     </div>
     <div class="user-profile-tagpost" style="display:flex;flex-direction:column;justify-content:center;align-items:center;background-color:#1874d2">
-    <img src="/assets/whale1.gif" style="height: 30vh;width:30vh;">
+    <%= image_tag("whale1.gif",{:style=>"height: 30vh;width:30vh;"})%>
     <h1 style="color:white;font-size:3vh;font-weight:400;">콘텐츠 준비중!</h1>
     </div>
 </div>
