--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -1,3 +1,30 @@
+<style>
+
+body::-webkit-scrollbar {
+    width: 2vh;
+    position:fixed;
+    height:2vh;
+    z-index:5;
+    background: rgb(34, 25, 65);
+}
+body::-webkit-scrollbar-button {
+    background: white;
+    display:none;
+}
+body::-webkit-scrollbar-track-piece {
+    background: rgb(34, 25, 65);
+}
+body::-webkit-scrollbar-thumb {
+    background: rgb(182, 173, 218);
+}
+body::-webkit-scrollbar-corner {
+    background: rgb(34, 25, 65);
+}
+body::-webkit-resizer {
+    background: rgb(34, 25, 65);
+}
+</style>
+
 <div class="education-main">
     <div class="education-main-chart">
         <div class="education-main-chart-box">
