--- a/app/assets/stylesheets/quiz.scss.erb
+++ b/app/assets/stylesheets/quiz.scss.erb
@@ -216,7 +216,7 @@
     border-radius: 5vw;
     width: 15vw;
     height: 4vw;
-    
+    border:none;
     display: flex;
     flex-direction: column;
     justify-content:  center;
