--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -110,7 +110,7 @@
             <div class="main-4-container-explain">
                 <h1>자격 요건 | 성지식에 능통한 당신이라면!</h1>
             </div>
-            <h2 style="">* 아이디 가입하지 않아도 돼요!</h2>
+            <h2 style="font-size:1.7vh;margin-top:2vh;">* 아이디 가입하지 않아도 돼요!</h2>
     </div>
 </div>
 
