--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 
   $("body").css({"background-color": "rgb(100, 33, 33)"});
 
-var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+var labels = '';
       var labelIndex = 0;
 
       function initialize() {
