--- a/app/assets/stylesheets/education-main.scss.erb
+++ b/app/assets/stylesheets/education-main.scss.erb
@@ -12,7 +12,8 @@
 .education-main-chart {
     width: 35vh;
     height: 100%;
-    position: fixed;
+    position:fixed;
+    z-index: 900;
 }
 
 .education-main-chart-box {
