--- a/app/assets/stylesheets/home-index.scss.erb
+++ b/app/assets/stylesheets/home-index.scss.erb
@@ -32,7 +32,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width:100vw;
+    width:100%;
     position:relative;
 }
 
@@ -104,7 +104,7 @@
     width: 25vh;
     height: 25vh;
     position:absolute;
-    background: url("물음표.svg") 100% 100% no-repeat;
+    background: url(<%=asset_path '물음표.svg'%>) 100% 100% no-repeat;
    top: -13vh;
    left:9vh;
     opacity:1;
@@ -115,7 +115,7 @@
     width: 25vh;
     height: 25vh;
     position:absolute;
-    background: url("이럴때있다말풍선.svg") 100% 100% no-repeat;
+    background: url(<%=asset_path '이럴때있다말풍선.svg'%>) 100% 100% no-repeat;
    top: -22vh;
    right:12vh;
     opacity:1;
@@ -533,9 +533,9 @@
 }
 
 .main-5-container {
-    margin-top: 7%;
-    width: 95%;
-    height: 85%;
+    margin-top: 3%;
+    width: 120vh;
+    height: 80vh;
     position:relative;
     display: flex;
     flex-direction: column;
