--- a/app/assets/stylesheets/education-main.scss.erb
+++ b/app/assets/stylesheets/education-main.scss.erb
@@ -104,7 +104,7 @@
     flex-direction: column;
     justify-content:  center;
     align-items: center;
-    position:relative;
+    position:absolute;
     top: 0;
 }
 
