--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -151,11 +151,11 @@
                             <h1><%if @cd != nil then @de = User.find_by_id(@bc[0].author_id)%><%=@de.email%></h1>
                             <div style="display:flex; flex-direction:row; align-items:center;">
                                 <h1><%=@de.created_at%><%end%></h1>
-                                <img src="/assets/earth.svg" alt="" style="width:2vh; height:2vh; margin-left:0.3vh; position:relative; top:0.3vh;">
+                                <%=image_tag("earth.svg", {:style=>"width:2vh; height:2vh; margin-left:0.3vh; position:relative; top:0.3vh;"})%>
                             </div>   
                         </div>
                     </div>
-                    <img src="/assets/3dot.svg" alt="" class="dot">
+                    <%=image_tag("3dot.svg", {:class=>"dot"})%>
                 </div>
             
                  <h1 class="post-content"><%=if @cd != nil then @bc[0].content end%></h1>
