--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,12 @@
           width: -webkit-calc(100vw - 37vh);
         }
     }
+     @media only screen and (min-width: 200vh) {
+        .post-index {
+          width: 200vh
+        }
+        }
+    }
     </style>
 
   </head>
