--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,12 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.post-index {
 
+}
 
 
 .post-index-profile {
-    width: 23vw;
-    
+    width: 30vh;
+    margin-left: 10vh;
     display:flex;
     justify-content: flex-start;
     align-items: center;
@@ -22,7 +24,7 @@
 }
 
 .post-index-profile-box {
-    width: 15vw;
+    width: 30vh;
     min-height:20vh;
     background-color: rgb(248, 248, 248);
     border-radius: 0.5vh;
@@ -46,7 +48,7 @@
 .post-username {
     margin-top:2vh;
     font-weight:500;
-    font-size: 2vw; 
+    font-size: 2vh; 
 }
 
 .post-index-popular {
@@ -60,8 +62,8 @@
         color: black;
     }
     img {
-        width: 2vw;
-        height: 2vw;
+        width: 4vh;
+        height: 4vh;
         position:relative;
         top:-0.3vh;
     }
@@ -69,16 +71,16 @@
 
 
 .post-index-profile-img {
-    width: 15vw;
-    height: 15vw;
+    width: 30vh;
+    height: 30vh;
     border-radius:0.5vh;
     box-shadow: 2vh 3vh 5vh rgba(19, 1, 1, 0.342);
     margin-top:20vh;
 }
 
 .post-index-celebrate {
-    width: 15vw;
-    height:4vw;
+    width: 30vh;
+    height:8vh;
     background-color: rgb(248, 248, 248);
     border-radius: 0.5vh;
     margin-top: 2vh;   
@@ -105,8 +107,8 @@
 }
 
 .post-index-menu {
-    width: 15vw;
-    height: 8vw;
+    width: 30vh;
+    height: 30vh;
     background-color: rgb(248, 248, 248);
     margin-top: 4vh;
     border-radius:0.5vh;
@@ -124,9 +126,9 @@
     margin-top: 20vh;
     margin-bottom: 10vh;
     padding: 0 2vh 4vh 2vh;
-    left: 23vw;
-    width:70vw;
-    min-height: 104vw;
+    left: 50vh;
+    width:130vh;
+    min-height: 203vh;
     background-color: rgb(248, 248, 248);
     border-radius:0.5vh;
     box-shadow: 3vh 4vh 8vh rgba(19, 1, 1, 0.342);
@@ -161,10 +163,10 @@
         margin-right: 2vh;
     }
     input {
-        width: 15vw;
+        width: 15vh;
         height: 3vh;
         border: none;
-        padding-left: 0.5vw;
+        padding-left: 0.5vh;
     }
 }
 
@@ -264,12 +266,12 @@
     justify-content: space-between;
     #comment_content {
         width: 85%;
-        height: 2.5vw;
+        height: 2.5vh;
         border:none;
         border-radius:0.5vh;
     }
     .post-show-new-comment-input {
-        height: 2.5vw;
+        height: 2.5vg;
         width: 13%;
         background-color:  rgb(219, 143, 43);
         border:none;
@@ -281,7 +283,7 @@
 }
 
 .post-show-comments {
-    width: 66vw;
+    width: 66vg;
     min-height:4vh;
     padding: 1vh 0vh 0 0vh;
     display: flex;
@@ -310,11 +312,11 @@
 }
 
 .holy {
-    margin-right: 2vw;
+    margin-right: 2vh;
 }
 
 .post-edit-title {
-    width: 66vw;
+    width: 66vh;
     padding: 0 4vh 0 4vh;
     margin-bottom: 4vh;
     
@@ -326,7 +328,7 @@
     }
     textarea {
         width: 100%;
-        height: 60vw;
+        height: 60vh;
         border: none;
         font-size: 1.5vh;
     }
@@ -377,5 +379,5 @@
 }
 
 .post-search .searchbutton {
-    width: 5vw;
+    width: 5vh;
 }
